--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -9,6 +9,7 @@
     "test": "../../node_modules/.bin/jest"
   },
   "dependencies": {
+    "data.maybe": "^1.2.2",
     "data.validation": "^1.3.1"
   },
   "devDependencies": {
