--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "data.maybe": "^1.2.2",
-    "data.validation": "^1.3.1"
+    "data.validation": "^1.3.1",
+    "is-whitespace-character": "^1.0.0"
   },
   "devDependencies": {
     "@playground/babel-preset": "^1.0.0",
