--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^7.2.2",
     "babel-jest": "^19.0.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-flowtype": "^2.30.4",
+    "eslint-plugin-jest": "^19.0.1",
     "jest": "^19.0.2",
     "lerna": "2.0.0-beta.38",
     "rollup": "^0.41.6",
