--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "test": "jest && codecov"
+    "test": "jest && codecov",
+    "precommit": "lint-staged"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.2",
@@ -14,8 +15,11 @@
     "eslint": "^3.19.0",
     "eslint-plugin-flowtype": "^2.30.4",
     "eslint-plugin-jest": "^19.0.1",
+    "husky": "^0.13.3",
     "jest": "^19.0.2",
     "lerna": "2.0.0-rc.2",
+    "lint-staged": "^3.4.0",
+    "prettier": "^1.1.0",
     "rollup": "^0.41.6",
     "rollup-watch": "^3.2.2"
   },
@@ -33,5 +37,11 @@
     "coverageDirectory": "./coverage/",
     "collectCoverage": true
   },
-  "dependencies": {}
+  "dependencies": {},
+  "lint-staged": {
+    "*.js": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
+  }
 }
