--- a/package.json
+++ b/package.json
@@ -6,36 +6,20 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "babel-eslint": "^7.2.2",
-    "babel-jest": "^19.0.0",
-    "codecov": "^2.1.0",
-    "eslint": "^3.19.0",
-    "eslint-plugin-flowtype": "^2.30.4",
-    "eslint-plugin-jest": "^19.0.1",
-    "husky": "^0.13.3",
-    "jest": "^19.0.2",
-    "lint-staged": "^3.4.0",
-    "prettier": "^1.1.0",
-    "rollup": "^0.41.6",
-    "rollup-watch": "^3.2.2"
+    "codecov": "^3.8.3",
+    "es-jest": "^1.2.0",
+    "esbuild": "^0.12.15",
+    "eslint": "^7.31.0",
+    "eslint-plugin-flowtype": "^5.8.1",
+    "eslint-plugin-jest": "^24.4.0",
+    "husky": "^7.0.1",
+    "jest": "^27.0.6",
+    "lint-staged": "^11.1.1",
+    "prettier": "^2.3.2"
   },
   "workspaces": [
     "packages/*"
   ],
-  "jest": {
-    "testRegex": "/__tests__/(?!__).*",
-    "bail": true,
-    "modulePathIgnorePatterns": [
-      "packages/.*/build"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/packages/.*/build"
-    ],
-    "testEnvironment": "node",
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true
-  },
   "lint-staged": {
     "*.js": [
       "prettier --single-quote --write",
