--- a/packages/json-parser/package.json
+++ b/packages/json-parser/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@playground/parser",
+  "name": "@playground/json-parser",
   "version": "1.0.0",
   "main": "src/index.js",
   "license": "MIT",
@@ -9,9 +9,6 @@
     "test": "jest -c ../../jest.config.js"
   },
   "dependencies": {
-    "chalk": "^4.1.1",
-    "data.maybe": "^1.2.3",
-    "data.validation": "^1.3.1",
-    "is-whitespace-character": "^2.0.0"
+    "@playground/parser": "^1.0.0"
   }
 }
