--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   ],
   "lint-staged": {
     "*.js": [
-      "prettier --single-quote --write",
-      "git add"
+      "prettier --single-quote --write"
     ]
   }
 }
